test/types/errors/test/syntax.ts
import * as Lab from '../../../..';
import add from '..';


const { expect } = Lab.types;


expect.error(add('a', 'b');
expect.error(add('a' 'b'));
